<resources>
    <string name="app_name">whatsAppClone</string>
    <string name="whatsappclone">WhatsAppClone</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="person">Name</string>
    <string name="timer">12 minute ago</string>
    <string name="chat_last_message">Last Message</string>
    <string name="digital_timer">10:00 PM</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="Address">address</string>
    <string name="update">Update</string>
    <string name="City">city</string>
    <string name="Name">Name</string>
    <string name="myAccount">My Account</string>
</resources>
