<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chat_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_design"
        android:padding="@dimen/_8sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/chat_Image"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:src="@drawable/cute"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/chat_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/chat_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/person"
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintEnd_toStartOf="@id/Digital_time"
            app:layout_constraintStart_toEndOf="@id/chat_Image"
            app:layout_constraintTop_toTopOf="@id/chat_Image" />

        <TextView
            android:id="@+id/chat_last_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/chat_last_message"
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="@id/chat_name"
            app:layout_constraintStart_toStartOf="@id/chat_name"
            app:layout_constraintTop_toBottomOf="@id/chat_name"

            />

        <TextView
            android:id="@+id/Digital_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/digital_timer"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/chat_name"
            app:layout_constraintTop_toTopOf="parent"


            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>